homepage/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  annotations:
    external-dns.kubernetes.io/target: lfp.it.paulus.family
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web-mtls
spec:
  ingressClassName: traefik
  rules:
    - host: it.paulus.family
      http:
        paths:
          - backend:
              service:
                name: homepage
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - it.paulus.family
